feat(docs): remove incomplete ReDoc integration and rollback setup
This commit documents and removes the partially implemented integration of ReDoc for OpenAPI documentation. The attempt was unsuccessful due to challenges with:

- Serving the OpenAPI spec (`openapi.yml`) at `/openapi.yml`.
- Rendering the ReDoc UI via a `redoc.leaf` template at `/docs`.
- Proper configuration of assets like `redoc.standalone.css` and `redoc.standalone.js`.

Changes:
- Removed the `Resources/OpenAPI` directory and `openapi.yml` placeholder.
- Deleted the `Resources/Views/redoc.leaf` template.
- Cleaned up references to `/openapi.yml` and `/docs` routes from `routes.swift`.
- Reverted Leaf configuration in `configure.swift`.
- Updated `.gitignore` to exclude Python virtual environment files used during the integration.

These changes roll the project back to its original state, ensuring no unnecessary files or configurations remain.

BREAKING CHANGE:
- The `/openapi.yml` and `/docs` endpoints are no longer available.
- ReDoc documentation and OpenAPI serving are deferred to future iterations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
+# Existing entries
 .DS_Store
 .build
 .swiftpm
 Packages
 *.xcodeproj
 *.xcworkspace
+
+# Python virtual environments
+venv/
+.env/
+
+# Python bytecode files
+*.pyc
+*.pyo
+__pycache__/
+
+# pip and virtual environment tools
+pip-log.txt
+pip-delete-this-directory.txt
+Pipfile.lock
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
