--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,9 @@ docker-compose.yml
 # Local Config Files
 *.local
 *.lock
+.DS_Store
+*.xcworkspacedata
+*.xcuserstate
+*.plist
+Resources/.DS_Store
+.DS_Store
